Revert "[#637] Fix styling of select on iOS (#650)" (#651)
This reverts commit 6eedd6cb5bb75a4ec3e0cb39d9b9c4d6ee498045.

--- a/src/index.scss
+++ b/src/index.scss
@@ -200,9 +200,6 @@ input {
 }
 
 select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
   background: $dark;
   border: none;
   border-radius: $border-radius;
